--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
 		"bootstrap": "^4.3.1",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
+		"react-animate-on-scroll": "^2.1.5",
 		"react-dom": "^16.8.4",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^5.2.0"
