--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
 		"react-animate-on-scroll": "^2.1.5",
 		"react-dom": "^16.8.4",
 		"react-polyfills": "0.0.1",
-		"react-router-dom": "^5.2.0"
+		"react-router-dom": "^5.2.0",
+		"sweetalert2": "^11.0.0"
 	}
 }
